Project

General

Profile

Actions

Bug #12100

closed

libadutils: cast between incompatible function types

Added by Toomas Soome almost 4 years ago. Updated almost 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
lib - userland libraries
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:

Description

Build errors with gcc 8:

    ../common/adutils_threadfuncs.c:73:21: error: cast between incompatible function types from 'pthread_t (*)(void)' {aka 'unsigned int (*)(void)'} to 'void * (*)(void)' [-Werror=cast-function-type]
      .ltf_threadid_fn = (void * (*)(void))pthread_self
                         ^
    cc1: all warnings being treated as errors

Testing done: build/install/boot

Actions #1

Updated by Toomas Soome almost 4 years ago

  • Description updated (diff)
Actions #2

Updated by Electric Monk almost 4 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 2c961aef81d7897b809d5e7c1c8a2e2c81495125

commit  2c961aef81d7897b809d5e7c1c8a2e2c81495125
Author: Toomas Soome <tsoome@me.com>
Date:   2019-12-27T14:56:35.000Z

    12100 libadutils: cast between incompatible function types
    Reviewed by: Andy Fiddaman <andy@omniosce.org>
    Reviewed by: C Fraire <cfraire@me.com>
    Reviewed by: Matthias Scheler <mscheler@tintri.com>
    Approved by: Robert Mustacchi <rm@fingolfin.org>

Actions

Also available in: Atom PDF